<resources>
  <string name="app_name">Equation.2.4.3</string>
  <string name="title">Решить уравнение ax\u00b2g+bx+c=0 </string>
  <string name="a">Введите A</string>
  <string name="b">Введите B</string>
  <string name="c">Введите C</string>
  <string name="calculate">Вычислить</string>
  <string name="emptyFieldError">Поля не должны быть пустыми</string>
  <string name="zeroACoefficient">Коэффициент а должен быть больше нуля</string>
  <string name="noRoots">Корней нет</string>
  <string name="rootsAre">Корни:</string>
  <string name="and">и</string>
  <string name="rootIs">Корень:</string>
</resources>
